Bug 21214 - The synaptics edge scrolling defaults are too small
Summary: The synaptics edge scrolling defaults are too small
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/synaptics (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Peter Hutterer
QA Contact:
URL: https://bugzilla.redhat.com/show_bug....
Whiteboard:
Keywords: NEEDINFO
Depends on:
Blocks:
 
Reported: 2009-04-15 23:47 UTC by Peter Hutterer
Modified: 2009-05-04 16:51 UTC (History)
5 users (show)

See Also:
i915 platform:
i915 features:


Attachments
0001-Add-TouchpadModel-specifier-and-scale-the-edges-acco.patch (4.01 KB, patch)
2009-04-30 21:12 UTC, Peter Hutterer
no flags Details | Splinter Review

Description Peter Hutterer 2009-04-15 23:47:46 UTC
For some touchpads (notably alps), the default edge width is too small to provide reliable scrolling.

https://bugzilla.redhat.com/show_bug.cgi?id=494766

The current approach of calculating the edges according to the synaptics interface guidelines and amount to roughly 4% of the total usable area.

This seems to be fine (from a subjective POV) for a Synaptics touchpad but too small for alps (which has a different range).

Users in Fedora bug 494766 state that a RightEdge of 890, 900 or (maximum) 950 is needed to be usable. The default from the calculation is 983.

We should probably adjust the default edge range to make it "just work" on most setups.
Comment 1 Christian Lohmaier 2009-04-17 18:23:21 UTC
"me too"

but with a Synaptics Touchpad in FSC esprimo mobile u9200 using RightEdge of 5170 instead of 5317 works perfectly for me (with the default, it appears at first that there would be no vertical scroll area at all)

Synaptics Touchpad, model: 1, fw: 6.2, id: 0x81a0b1, caps: 0xa04753/0x200000
input: SynPS/2 Synaptics TouchPad as /devices/platform/i8042/serio4/input/input0

https://qa.mandriva.com/show_bug.cgi?id=49625 (specific wrt. scroll-area, duplicate of the catch-all "synaptics touchpad doesn't work properly" https://qa.mandriva.com/show_bug.cgi?id=47149 )
Comment 2 Peter Hutterer 2009-04-30 21:12:45 UTC
Created attachment 25327 [details] [review]
0001-Add-TouchpadModel-specifier-and-scale-the-edges-acco.patch

Try to auto-detect the model (eventcomm anyway) and set the edges accordingly.

New edge defaults are:
 synaptics: 7% of the total width
 alps: 15% of the total width
 unknown: 4% of the total width (see Synaptics UI guide)

Please give this one a test.
Comment 3 Henrik Rydberg 2009-05-01 01:44:07 UTC
Works on the large bcm5974 touchpad.
Comment 4 Stefano Avallone 2009-05-04 01:08:21 UTC
Both horizontal and vertical scrolling works on an AlpsPS/2 ALPS GlidePoint touchpad. 

xinput shows "Synaptics Edges (226):  153, 870, 115, 652"

I was used to 40, 900 (through hal), 42, 680 (through hal). Anyway, it works as well. Thanks!
Comment 5 Peter Hutterer 2009-05-04 16:51:31 UTC
Pushed as c50dba0b04f2115a5d23ed4a785c101f9b26900b. Closing as FIXED. thanks for testing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.