Add TouchpadModel specifier and scale the edges accordingly. (#21214)

ALPS models need different edge settings than synaptics pads to make the edges
work propertly. So try to auto-detect the model (eventcomm anyway) and set the
edges accordingly.

New edge defaults are:
 synaptics: 7% of the total width
 alps: 15% of the total width
 unknown: 4% of the total width (see Synaptics UI guide)

X.Org Bug 21214 <http://bugs.freedesktop.org/show_bug.cgi?id=21214>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Signed-off-by: Christoph Brill <egore911@egore911.de>
Signed-off-by: Henrik Rydberg <rydberg@euromail.se>